# aoc2023

1A/: Main.hs
1B/: Main.hs
2A/app/: Main.hs
2B/: x2.cabal
2B/app/: Main.hs
3A/: 3A.cabal  CHANGELOG.md  LICENSE
3A/app/: Main.hs
3B/: 3B.cabal  CHANGELOG.md
3B/app/: Main.hs
4A/: 4A.cabal  CHANGELOG.md
4A/app/: Main.hs
4B/: 4B.cabal  CHANGELOG.md
4B/app/: Main.hs
5A/: 5A.cabal  CHANGELOG.md
5A/app/: Main.hs
5B/: 5B.cabal  CHANGELOG.md
5B/app/: Main.hs
6A/: 6A.cabal  CHANGELOG.md
6A/app/: Main.hs
6B/: 6B.cabal  CHANGELOG.md  sample.txt
6B/app/: Main.hs
7A/: 7A.cabal  CHANGELOG.md
7A/app/: Main.hs
7B/: 7B.cabal  CHANGELOG.md
7B/app/: Main.hs
