cabal-version:      3.4
name:               5B
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             murky_depth
maintainer:         max@dollinger.dev
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 5B
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        regex-tdfa ^>= 1.3.2,
        split
    hs-source-dirs:   app
    default-language: GHC2021
